# my_rust_pratice

./: Cargo.toml  build.bat
.github/workflows/: rust.yml
src/: enums.rs  get_pot_player.rs  main.rs  main_1.rs  router.rs  uitl.rs
src/controllers/: me.rs
